--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,26 +1,71 @@
-name: Android CI
+name: Build
 
 on:
-  push:
-    branches: [ "13.0" ]
+
   pull_request:
-    branches: [ "13.0" ]
 
 jobs:
-  build:
 
-    runs-on: ubuntu-latest
+  Release:
+
+    runs-on: ubuntu-22.04
+
+    strategy:
+
+      matrix:
+
+        abi:
+
+          - arm64-v8a
+
+    env:
+
+      ABI: ${{ matrix.abi }}
 
     steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Fetch source code
+
+        uses: actions/checkout@v2
+
+        with:
+
+          fetch-depth: 0
+
+          submodules: recursive
+
+      - name: Setup Java
+
+        uses: actions/setup-java@v3
+
+        with:
+
+          distribution: "temurin"
+
+          java-version: "17"
+
+      - name: Setup Android Environment
+
+        uses: android-actions/setup-android@v2
+
+      - name: Install Android NDK
+
+        run: |
+
+          sdkmanager --install "cmake;3.22.1"
+
+      - name: Install system dependencies
+
+        run: |
+
+          sudo apt update
+
+          sudo apt install extra-cmake-modules gettext
+
+      - name: Setup Gradle
+
+        uses: gradle/gradle-build-action@v2
+
+      - name: Build Release APK
+
+        run: ./gradlew assembleRelease --no-daemon
