--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,44 +1,47 @@
-name: Build
+name: Android CI
 
+on:
 on:
   workflow_dispatch:
 
 jobs:
-  Release:
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        abi:
-          - arm64-v8a
-    env:
-      ABI: ${{ matrix.abi }}
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Fetch source code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - uses: gradle/wrapper-validation-action@v1
+    - name: set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew assembleRelease
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.3.1
+      with:
+        name: apk
+        path: app/build/outputs/apk/release/*.apk
+        
+  release:
+    name: Release APK
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download APK from build
+        uses: actions/download-artifact@v1
         with:
-          fetch-depth: 0
-          submodules: recursive
-
-      - name: Setup Java
-        uses: actions/setup-java@v3
+          name: apk  
+      
+      - name: Automatic Releases
+        uses: marvinpinto/action-automatic-releases@v1.2.1
         with:
-          distribution: "temurin"
-          java-version: "17"
-
-      - name: Setup Android Environment
-        uses: android-actions/setup-android@v2
-
-      - name: Install Android NDK
-        run: |
-          sdkmanager --install "cmake;3.22.1"
-
-      - name: Install system dependencies
-        run: |
-          sudo apt update
-          sudo apt install extra-cmake-modules gettext
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
-      - name: Build Release APK
-        run: ./gradlew assembleRelease --no-daemon
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          automatic_release_tag: "latest"
+          prerelease: false
+          files: apk/*.apk
